feat: pantry endpoints added
feat: pantry endpoints added
