# internal/dto/pantry.go
@@ -1,0 +1,10 @@
+package dto
+
+type PantryIngredientResponse struct {
+	IngredientID       uint   `json:"ingredient_id"`
+	IngredientName     string `json:"ingredient_name"`
+}
+
+type PantryIngredientRequest struct {
+	IngredientID uint `json:"ingredient_id"`
+}
